--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #d3d3d3, #a9a9a9); /* Серые оттенки */
+            background: linear-gradient(135deg, #1e3a8a, #3b82f6); /* Градиент синих оттенков */
             color: white;
             text-align: center;
         }
@@ -23,22 +23,22 @@
             max-width: 800px;
             text-align: center;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
+            background-color: rgba(0, 0, 50, 0.5); /* Полупрозрачный синий фон */
             border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 4px 15px rgba(0, 0, 50, 0.5);
         }
 
         h1 {
             font-size: 2rem;
             margin-bottom: 2rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            text-shadow: 2px 2px 4px rgba(0, 0, 50, 0.7);
         }
 
         video {
             width: 100%;
             max-width: 600px;
             border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(0, 0, 50, 0.3);
             margin-bottom: 1.5rem;
         }
 
