--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         video {
             width: 100%;
             max-width: 600px;
+            max-height: 70vh; /* Ограничиваем высоту до 70% высоты экрана */
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             margin-bottom: 1.5rem;
